修复bug，并且增加资料管理模块

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /config-manager/config-pojo/target/
 /config-manager/config-service/target/
 /config-manager/config-web/target/
+/config-manager/config-web/src/test/
