--- a/config-manager/config-web/src/main/resources/properties/excel-en.properties
+++ b/config-manager/config-web/src/main/resources/properties/excel-en.properties
@@ -37,7 +37,7 @@ excel.smartGateway.telecomControlModel201 = SLG-GW-48-C201
 excel.smartGateway.telecomControlModel202 = SLG-GW-48-C202
 
 #\u6C47\u6D41\u67DC\u914D\u7F6E
-excel.convergenceCabinet.name = Convergence Cabinet
+excel.convergenceCabinet.name = Junction Cabinet
 excel.convergenceCabinet.unit = set
 excel.convergenceCabinet.remark = Each Power need 1
 
@@ -66,20 +66,20 @@ excel.firmwawre.remark = Each Power need 1 set
 #\u5DE5\u7A0B\u5B89\u88C5
 excel.installation.title = Engineering Installation
 #\u5DE5\u7A0B\u8F85\u6599
-excel.engineeringMaterials.name = Engineering materials
+excel.engineeringMaterials.name = Engineering Accessories
 excel.engineeringMaterials.unit = set
-excel.engineeringMaterials.remark = Each Power need 1 set\uFF0CAccounting for 10% of the smart system
+excel.engineeringMaterials.remark = Each Power need 1 set
 #\u7EBF\u69FD
 excel.troughs.name = Troughs
-excel.troughs.unit = W40mm * H30mm
-excel.troughs.model = meter
+excel.troughs.model = W50mm * H50mm
+excel.troughs.unit = meter
 #\u901A\u4FE1\u67DC
-excel.communicateCabinet.name = Communicate Cabinet
+excel.communicateCabinet.name = Network Communicate Cabinet
 excel.communicateCabinet.unit = set
 excel.communicateCabinet.model = 20U\uFF0Cwith PDU, rail
 excel.communicateCabinet.remark = Each battery room need 1
 #\u4EA4\u6362\u673A
-excel.switch.name = Switch
+excel.switch.name = Network Switch
 excel.switch.unit = set
 excel.switch.remark = Each battery room need 1
 
@@ -107,7 +107,7 @@ excel.gsmModem.model = ETPro-101Ai/Bi GSM Modem
 excel.gsmModem.remark = Each server need 1
 
 #\u5907\u54C1\u914D\u7F6E
-excel.backupTitle.name = Backup
+excel.backupTitle.name = Spare Parts
 
 #\u7EA2\u5916\u63A7\u5236\u5668
 excel.infraredController.name = Air conditioning infrared controller
