--- a/config-manager/config-service/pom.xml
+++ b/config-manager/config-service/pom.xml
@@ -19,6 +19,13 @@
             <artifactId>config-mapper</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
