--- a/config-manager/config-web/src/main/resources/properties/excel-zh.properties
+++ b/config-manager/config-web/src/main/resources/properties/excel-zh.properties
@@ -68,11 +68,11 @@ excel.installation.title = \u5DE5\u7A0B\u5B89\u88C5
 #\u5DE5\u7A0B\u8F85\u6599
 excel.engineeringMaterials.name = \u5DE5\u7A0B\u8F85\u6599
 excel.engineeringMaterials.unit = \u5957
-excel.engineeringMaterials.remark = \u6BCF\u53F0\u7535\u6E90\u914D1\u5957\uFF0C\u6309\u667A\u80FD\u7CFB\u7EDF\u768410%\u8FDB\u884C\u6838\u7B97
+excel.engineeringMaterials.remark = \u6BCF\u53F0\u7535\u6E90\u914D1\u5957
 #\u7EBF\u69FD
 excel.troughs.name = \u7EBF\u69FD
 excel.troughs.unit = \u7C73
-excel.troughs.model = W40mm * H30mm
+excel.troughs.model = W50mm * H50mm
 #\u901A\u4FE1\u67DC
 excel.communicateCabinet.name = \u901A\u4FE1\u67DC
 excel.communicateCabinet.unit = \u53F0
