--- a/config-manager/config-web/src/main/webapp/WEB-INF/web.xml
+++ b/config-manager/config-web/src/main/webapp/WEB-INF/web.xml
@@ -35,59 +35,17 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <!--
-    <jsp-config>
-        <jsp-property-group>
-            <description>
-                Special property group for JSP Configuration JSP example.
-            </description>
-            <display-name>JSPConfiguration</display-name>
-            <url-pattern>*.jsp</url-pattern>
-            <el-ignored>true</el-ignored>
-            <page-encoding>UTF-8</page-encoding>
-            <scripting-invalid>false</scripting-invalid>
-        </jsp-property-group>
-        <jsp-property-group>
-            <description>
-                Special property group for JSP Configuration JSP example.
-            </description>
-            <display-name>JSPConfiguration</display-name>
-            <url-pattern>*.html</url-pattern>
-            <el-ignored>true</el-ignored>
-            <page-encoding>UTF-8</page-encoding>
-            <scripting-invalid>false</scripting-invalid>
-        </jsp-property-group>
-        <jsp-property-group>
-            <description>
-                Special property group for JSP Configuration JSP example.
-            </description>
-            <display-name>JSPConfiguration</display-name>
-            <url-pattern>*.txt</url-pattern>
-            <el-ignored>true</el-ignored>
-            <page-encoding>UTF-8</page-encoding>
-            <scripting-invalid>false</scripting-invalid>
-        </jsp-property-group>
-        <jsp-property-group>
-            <description>
-                Special property group for JSP Configuration JSP example.
-            </description>
-            <display-name>JSPConfiguration</display-name>
-            <url-pattern>*.js</url-pattern>
-            <el-ignored>true</el-ignored>
-            <page-encoding>UTF-8</page-encoding>
-            <scripting-invalid>false</scripting-invalid>
-        </jsp-property-group>
-        <jsp-property-group>
-            <description>
-                Special property group for JSP Configuration JSP example.
-            </description>
-            <display-name>JSPConfiguration</display-name>
-            <url-pattern>*.css</url-pattern>
-            <el-ignored>true</el-ignored>
-            <page-encoding>UTF-8</page-encoding>
-            <scripting-invalid>false</scripting-invalid>
-        </jsp-property-group>
-    </jsp-config>
-    -->
+    <filter>
+        <filter-name>characterEncodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>characterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
