--- a/config-parent/pom.xml
+++ b/config-parent/pom.xml
@@ -36,7 +36,8 @@
         <excel.version>3.16-beta1</excel.version>
         <xmlbean.version>2.3.0</xmlbean.version>
         <fastjson.version>1.2.46</fastjson.version>
-
+        <pdfbox.version>2.0.9</pdfbox.version>
+        <fontbox.version>2.0.9</fontbox.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -244,6 +245,19 @@
                 <artifactId>protostuff-runtime</artifactId>
                 <version>${protostuff.version}</version>
             </dependency>
+
+            <!--pdf工具-->
+            <dependency>
+                <groupId>org.apache.pdfbox</groupId>
+                <artifactId>pdfbox</artifactId>
+                <version>${pdfbox.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.pdfbox</groupId>
+                <artifactId>fontbox</artifactId>
+                <version>${fontbox.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
